Fix actions buttons alignments

--- a/symphony/assets/css/src/admin.less
+++ b/symphony/assets/css/src/admin.less
@@ -688,7 +688,7 @@ body.page-single #contents .actions {
 	margin: 0;
 	padding: 0;
 	z-index: 110;
-	margin-left: -@spacing-smallish;
+	margin-left: -@spacing-smallest;
 
 	input, button {
 		margin-left: @spacing-smallest;
